--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-mongodb": "^1.0.3",
     "framer-motion": "^11.2.12",
+    "lucia": "^3.2.0",
+    "mongodb": "^6.8.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
