--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-mongodb": "^1.0.3",
+    "arctic": "^1.9.1",
     "framer-motion": "^11.2.12",
     "lucia": "^3.2.0",
     "mongodb": "^6.8.0",
