--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucia": "^3.2.0",
     "mongodb": "^6.8.0",
     "next": "14.2.4",
+    "oslo": "^1.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0"
