--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lucia-auth/adapter-mongodb": "^1.0.3",
     "arctic": "^1.9.1",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.2.12",
     "lucia": "^3.2.0",
     "mongodb": "^6.8.0",
@@ -21,6 +22,7 @@
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
