--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "framer-motion": "^11.2.12",
     "lucia": "^3.2.0",
     "mongodb": "^6.8.0",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "oslo": "^1.2.1",
     "react": "^18",
     "react-dom": "^18",
