--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "oslo": "^1.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-otp-input": "^3.1.1",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
