--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-otp-input": "^3.1.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
